# CWF

./: CMakeLists.txt  LICENSE  README.md  readme.md
MAIN/: CMakeLists.txt  cwf.cpp  main.cpp
cmake/: FindBGAL.cmake
data/: n1000_block_Smooth_inputPoints.xyz  n1000_block_inputPoints.xyz  n2000_bunny_inputPoints.xyz  n600_mobius1_inputPoints.xyz
include/: CMakeLists.txt
include/BGAL/: CMakeLists.txt
lib/: Algorithm.lib  Algorithmd.lib  BaseShape.lib  CVTLike.lib  Draw.lib  Drawd.lib  Geodesic.lib  Geodesicd.lib  Integral.lib  Integrald.lib  Model.lib  PQP.lib  PQPd.lib  PointCloudProcessing.lib  PointCloudProcessingd.lib  Reconstruction.lib  Reconstructiond.lib  Tessellation2D.lib  Tessellation3D.lib
src/: CMakeLists.txt
src/Algorithm/: CMakeLists.txt
src/BaseShape/: CMakeLists.txt  KDTree.cpp  Line.cpp  Point.cpp  Polygon.cpp  Triangle.cpp
src/CVTLike/: CMakeLists.txt  CPD.cpp  CVT.cpp
src/Draw/: CMakeLists.txt  DrawPS.cpp
src/Geodesic/: AbstractMethod.cpp  CMakeLists.txt
src/Integral/: CMakeLists.txt  Integral.cpp  Tetrahedron_arbq_rule.cpp
src/Model/: CMakeLists.txt  ManifoldModel.cpp  Model.cpp  Model_Iterator.cpp
src/Optimization/: CMakeLists.txt
src/PQP/: BV.cpp  Build.cpp  CMakeLists.txt  PQP.cpp  TriDist.cpp
src/PointCloudProcessing/: CMakeLists.txt
src/Reconstruction/: CMakeLists.txt
src/Tessellation2D/: CMakeLists.txt  Side2D.cpp  Tessellation2D.cpp
src/Tessellation3D/: CMakeLists.txt  Side3D.cpp  Tessellation3D.cpp
test/: CMakeLists.txt  main.cpp
test/data/: CVTLBFGSTest.ps  DrawTest.ps  ICPTest.txt  KDTreeTest.txt  (+1 more)
(+281 files in other folders)
